.deploy/aims-saas-adapter-mdm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aims-saas-adapter-mdm
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
